--- a/desafio-01/index.html
+++ b/desafio-01/index.html
@@ -3,10 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
   <title>Blog</title>
+  <!-- Link CSS -->
+  <link rel="stylesheet" href="./css/style.css">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <header>
+    <h1><span>Code</span>Lab</h1>
+    <div class="search-blog">
+      <img src="images/icon-search.svg" alt="Ícone de busca">
+      <input type="text" placeholder="Pesquisar no blog">
+    </div>
+  </header>
+
+  <main>
+    <article class="card">
+      <div class="date">
+        <span>17 de ago, 2024</span>
+        <img src="images/icon-heart.svg" alt="Ícone de coração">
+      </div>
+      <h2>O que é linguagem de programação? Conheça as principais</h2>
+      <p>Uma das mais populares vertentes da tecnologia da informação, a área de programação segue tendo muita demanda de trabalho justamente pela velocidade com que dispositivos tecnológicos vêm avançando.</p>
+    </article>
+    <article class="card">
+      <div class="date">
+        <span>12 de jul, 2024</span>
+        <img src="images/icon-heart.svg" alt="Ícone de coração">
+      </div>
+      <h2>GitHub agora permite fazer login sem precisar de senha</h2>
+      <p>O GitHub anunciou nesta quarta-feira (12) o acesso a partir das passkeys, método de autenticação sem senhas. A novidade está disponível em uma versão beta pública e pode substituir a autenticação em dois fatores.</p>
+    </article>
+    <article class="card">
+      <div class="date">
+        <span>21 de jun, 2024</span>
+        <img src="images/icon-heart.svg" alt="Ícone de coração">
+      </div>
+      <h2>Por que os hiperlinks são azuis em sua maioria?</h2>
+      <p>Quem navega na internet, certamente já percebeu que ela conta com diversos recursos para tornar a nossa vida mais fácil. Entre essas opções podemos mencionar os hiperlinks – uma palavra ou termo clicável que direciona o leitor.</p>
+    </article>
+  </main>
 </body>
 </html>
