style: Adição do rodapé desafio-01

--- a/desafio-01/index.html
+++ b/desafio-01/index.html
@@ -55,6 +55,10 @@
     </article>
   </main>
 
+  <footer>
+    <p>Desafio do <a href="https://github.com/iuricode" target="_blank">IuriCode</a>. Desenvolvido por <a href="https://github.com/LucasGabriell97" target="_blank">Lucas Gabriell</a>.</p>
+  </footer>
+
   <!-- Scroll Reveal -->
   <script src="https://unpkg.com/scrollreveal"></script>
   <!-- JavaScript -->
