style: correções no uso correto dos espaçamentos

--- a/desafio-01/index.html
+++ b/desafio-01/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <div class="container">
+    <div class="header-container">
       <h1><span>Code</span>Lab</h1>
       <div class="search-blog">
         <img src="images/icon-search.svg" alt="Ícone de busca">
@@ -22,7 +22,7 @@
     </div>
   </header>
 
-  <main class="container">
+  <main class="main-container">
     <article class="card">
       <div class="date">
         <span>17 de ago, 2024</span>
