style: finalizando os estilos da versão mobile do desafio-02

--- a/desafio-02/index.html
+++ b/desafio-02/index.html
@@ -9,14 +9,14 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="notice">
     <p>Frete grátis para todo o Brasil</p>
   </div>
 
-  <header class="header-bg">
+  <header>
     <img src="./images/logo.svg" alt="Logo da JordanShoes">
     <h1>A melhor loja de Jordan</h1>
     <p>O tênis Jordan é fruto de uma velha e forte parceria entre a Nike e o jogador Michael Jordan.</p>
@@ -26,47 +26,71 @@
     <section>
       <h2>Os melhores em um só lugar</h2>
       <p>A marca Jordan na JordanShoes é a escolha certa para os amantes de sneakers que buscam estilo e conforto.</p>
-      <div class="items">
+      <div class="sneakers">
         <div class="card">
-          <img src="./images/jordan-1.png" alt="">
-          <h3>Air Jordan 1 Mid Dutch Green</h3>
-          <span>Tênis Air Jordan</span>
-          <p>R$ 1.199,99</p>
+          <div class="sneaker-image">
+            <img src="./images/jordan-1.png" alt="">
+          </div>
+          <div class="sneaker-info">
+            <h3>Air Jordan 1 Mid Dutch Green</h3>
+            <span>Tênis Air Jordan</span>
+          </div>
+          <p class="sneaker-price">R$ 1.199,99</p>
         </div>
 
         <div class="card">
-          <img src="./images/jordan-2.png" alt="">
-          <h3>Air Jordan 1 High Zoom CMFT Tropical Twist</h3>
-          <span>Tênis Air Jordan</span>
-          <p>R$ 1.049,00</p>
+          <div class="sneaker-image">
+            <img src="./images/jordan-2.png" alt="">
+          </div>
+          <div class="sneaker-info">
+            <h3>Air Jordan 1 High Zoom CMFT Tropical Twist</h3>
+            <span>Tênis Air Jordan</span>
+          </div>
+          <p class="sneaker-price">R$ 1.049,00</p>
         </div>
 
         <div class="card">
-          <img src="./images/jordan-3.png" alt="">
-          <h3>Air Jordan 1 Mid Dutch Green</h3>
-          <span>Tênis Air Jordan</span>
-          <p>R$ 1.350,00</p>
+          <div class="sneaker-image">
+            <img src="./images/jordan-3.png" alt="">
+          </div>
+          <div class="sneaker-info">
+            <h3>Air Jordan 1 Mid Dutch Green</h3>
+            <span>Tênis Air Jordan</span>
+          </div>
+          <p class="sneaker-price">R$ 1.350,00</p>
         </div>
 
         <div class="card">
-          <img src="./images/jordan-4.png" alt="">
-          <h3>Air Jordan 1 Mid Mid GS "Light Smoke Grey"</h3>
-          <span>Tênis Air Jordan</span>
-          <p>R$ 1.585,00</p>
+          <div class="sneaker-image">
+            <img src="./images/jordan-4.png" alt="">
+          </div>
+          <div class="sneaker-info">
+            <h3>Air Jordan 1 Mid Mid GS "Light Smoke Grey"</h3>
+            <span>Tênis Air Jordan</span>
+          </div>
+          <p class="sneaker-price">R$ 1.585,00</p>
         </div>
 
         <div class="card">
-          <img src="./images/jordan-5.png" alt="">
-          <h3>Air Jordan 1 Mid SE Bright Citrus</h3>
-          <span>Tênis Air Jordan</span>
-          <p>R$ 949,99</p>
+          <div class="sneaker-image">
+            <img src="./images/jordan-5.png" alt="">
+          </div>
+          <div class="sneaker-info">
+            <h3>Air Jordan 1 Mid SE Bright Citrus</h3>
+            <span>Tênis Air Jordan</span>
+          </div>
+          <p class="sneaker-price">R$ 949,99</p>
         </div>
 
         <div class="card">
-          <img src="./images/jordan-6.png" alt="">
-          <h3>Air Jordan 1 Mid Grey Camo</h3>
-          <span>Tênis Air Jordan</span>
-          <p>R$ 999,99</p>
+          <div class="sneaker-image">
+            <img src="./images/jordan-6.png" alt="">
+          </div>
+          <div class="sneaker-info">
+            <h3>Air Jordan 1 Mid Grey Camo</h3>
+            <span>Tênis Air Jordan</span>
+          </div>
+          <p class="sneaker-price">R$ 999,99</p>
         </div>
       </div>
     </section>
