style: finalizando os estilos da versão tablet do desafio-02

--- a/desafio-02/index.html
+++ b/desafio-02/index.html
@@ -18,8 +18,10 @@
 
   <header>
     <img src="./images/logo.svg" alt="Logo da JordanShoes">
-    <h1>A melhor loja de Jordan</h1>
-    <p>O tênis Jordan é fruto de uma velha e forte parceria entre a Nike e o jogador Michael Jordan.</p>
+    <div class="header-info">
+      <h1>A melhor loja de Jordan</h1>
+      <p>O tênis Jordan é fruto de uma velha e forte parceria entre a Nike e o jogador Michael Jordan.</p>
+    </div>
   </header>
 
   <main>
@@ -65,7 +67,7 @@
             <img src="./images/jordan-4.png" alt="">
           </div>
           <div class="sneaker-info">
-            <h3>Air Jordan 1 Mid Mid GS "Light Smoke Grey"</h3>
+            <h3>Air Jordan 1 Mid GS "Light Smoke Grey"</h3>
             <span>Tênis Air Jordan</span>
           </div>
           <p class="sneaker-price">R$ 1.585,00</p>
