style: finalizando desafio-02 com a versão desktop

--- a/desafio-02/index.html
+++ b/desafio-02/index.html
@@ -17,21 +17,23 @@
   </div>
 
   <header>
-    <img src="./images/logo.svg" alt="Logo da JordanShoes">
-    <div class="header-info">
-      <h1>A melhor loja de Jordan</h1>
-      <p>O tênis Jordan é fruto de uma velha e forte parceria entre a Nike e o jogador Michael Jordan.</p>
+    <div class="header-container">
+      <img src="./images/logo.svg" alt="Logo da JordanShoes">
+      <div class="header-info">
+        <h1>A melhor loja de Jordan</h1>
+        <p>O tênis Jordan é fruto de uma velha e forte parceria entre a Nike e o jogador Michael Jordan.</p>
+      </div>
     </div>
   </header>
 
   <main>
-    <section>
+    <section class="section-container">
       <h2>Os melhores em um só lugar</h2>
       <p>A marca Jordan na JordanShoes é a escolha certa para os amantes de sneakers que buscam estilo e conforto.</p>
       <div class="sneakers">
         <div class="card">
           <div class="sneaker-image">
-            <img src="./images/jordan-1.png" alt="">
+            <img src="./images/jordan-1.webp" alt="">
           </div>
           <div class="sneaker-info">
             <h3>Air Jordan 1 Mid Dutch Green</h3>
@@ -42,7 +44,7 @@
 
         <div class="card">
           <div class="sneaker-image">
-            <img src="./images/jordan-2.png" alt="">
+            <img src="./images/jordan-2.webp" alt="">
           </div>
           <div class="sneaker-info">
             <h3>Air Jordan 1 High Zoom CMFT Tropical Twist</h3>
@@ -53,7 +55,7 @@
 
         <div class="card">
           <div class="sneaker-image">
-            <img src="./images/jordan-3.png" alt="">
+            <img src="./images/jordan-3.webp" alt="">
           </div>
           <div class="sneaker-info">
             <h3>Air Jordan 1 Mid Dutch Green</h3>
@@ -64,7 +66,7 @@
 
         <div class="card">
           <div class="sneaker-image">
-            <img src="./images/jordan-4.png" alt="">
+            <img src="./images/jordan-4.webp" alt="">
           </div>
           <div class="sneaker-info">
             <h3>Air Jordan 1 Mid GS "Light Smoke Grey"</h3>
@@ -75,7 +77,7 @@
 
         <div class="card">
           <div class="sneaker-image">
-            <img src="./images/jordan-5.png" alt="">
+            <img src="./images/jordan-5.webp" alt="">
           </div>
           <div class="sneaker-info">
             <h3>Air Jordan 1 Mid SE Bright Citrus</h3>
@@ -86,7 +88,7 @@
 
         <div class="card">
           <div class="sneaker-image">
-            <img src="./images/jordan-6.png" alt="">
+            <img src="./images/jordan-6.webp" alt="">
           </div>
           <div class="sneaker-info">
             <h3>Air Jordan 1 Mid Grey Camo</h3>
@@ -97,5 +99,9 @@
       </div>
     </section>
   </main>
+
+  <footer>
+    <p>Desafio do <a href="https://github.com/iuricode" target="_blank">IuriCode</a>. Desenvolvido por <a href="https://github.com/LucasGabriell97" target="_blank">Lucas Gabriell</a>.</p>
+  </footer>
 </body>
 </html>
