--- a/desafio-10/index.html
+++ b/desafio-10/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="font-archivo">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
